@@ -5,6 +5,7 @@
     * Removed the registerModule from api and exposed registerLibrary for registering third party libraries
     * Added TravisCI integration
     * Added changelog and gitignore
+    * Added deleteModule to api
 
 2013-11-19: Version 1.0.0
 
